[package]
name = "query-security-txt"
version = "1.1.2"
edition = "2021"
description = "query-security-txt is a tool that queries smart contracts on the Solana blockchain for security.txt information"
readme = "../security-txt/README.md"
repository = "https://github.com/neodyme-labs/solana-security-txt"
license = "MIT OR Apache-2.0"

[dependencies]
bincode = "1.3.3"
clap = { version = "3.1.6", features = ["derive"] }
color-eyre = "0.6.1"
solana-security-txt = { version = "1.1.2", path = "../security-txt", features = [
    "parser",
] }
solana-rpc-client = "3.0.10"
solana-loader-v3-interface = { version = "6.1.0", features = ["serde"] }
solana-pubkey = "4.0.0"
solana-sdk-ids = "3.0.0"
