[package]
name = "security-txt"
version = "0.1.0"
edition = "2021"
description = "security-txt is a macro that helps security researchers contact you about vulnerabilities in your smart contract"
readme = "../README.md"
repository = "https://github.com/neodyme-labs/solana-security-txt"
license = "MIT OR Apache-2.0"


[dependencies]
thiserror = "1.0.30"
twoway = "0.2.2"
